# databuf.rs

./: Cargo.toml  LICENSE  README.md  list.todo  log
.github/workflows/: rust.yml
bin_layout_derive/: Cargo.toml
bin_layout_derive/src/: lib.rs
databuf_derive/: Cargo.toml
databuf_derive/src/: lib.rs
databuf_derive_impl/: Cargo.toml
databuf_derive_impl/src/: decode.rs  encode.rs  lib.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: basic.rs
spec/: var_int.md
src/: bytes.rs  config.rs  cursor.rs  error.rs  len.rs  len_coder.rs  lencoder.rs  lib.rs  record.rs  size_hint.rs  specialization.rs  types.rs  utils.rs  var_int.rs
src/record/: collection.rs  mod.rs  specialize.rs  string.rs  zero_copy.rs
src/types/: alloc.rs  collection.rs  compound.rs  enumerate.rs  mod.rs  other.rs  scalar.rs  utils.rs  wrapper.rs  zero_copy.rs
src/view/: endian.rs  mod.rs
tests/: basic.rs  derive.rs  enum.rs  len_coder.rs  lencoder.rs  num.rs  s.rs  scaler.rs  serde.rs  simple.rs  size_hint.rs
