[package]
name = "databuf"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/databuf.rs"
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
description = "This library used to serialize and deserialize data in binary format."

[features]

# Endianness
BE = []         # Big Endian
NE = []         # Native Endian

# Variable-Length integer encoding types
L2 = []         # 15 bits

[dependencies]
databuf-derive = { path = "./databuf_derive", version = "0.1" }

[workspace]
members = ["databuf_derive"]