[workspace]
members = ["databuf_derive", "databuf_derive_impl"]

[package]
name = "databuf"
version = "0.5.0"
edition = "2021"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/databuf.rs"
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
description = "This library used to serialize and deserialize structured data in binary format"

exclude = ["/databuf_derive", "/databuf_derive_impl", "/tests",  ".*"]

[dependencies]
databuf-derive = { path = "./databuf_derive", version = "0.5" }