[package]
name = "bin-layout-derive"
version = "0.7.0"
edition = "2018"

description = "This library used to serialize and deserialize data in binary format."
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/bin-layout.rs"
license = "Apache-2.0"
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1.0"