[package]
name = "databuf-derive"
version = "0.3.0"
edition = "2021"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/databuf.rs"
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
description = "This library used to serialize and deserialize data in binary format."

[features]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"