[package]
name = "databuf_derive_impl"
version = "0.1.1"
edition = "2021"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/databuf.rs"
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
description = "This library used to serialize and deserialize data in binary format."

[dependencies]
syn = "2"
quote2 = "0.7"